# bob-rust-cli

./: Cargo.toml  README.md  dummy.txt
.github/workflows/: pull-request.yml
src/: main.rs
