[package]
name = "bob2"
version = "0.0.1"
edition = "2021"
description = "This is a cli tool made for learning purpose"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
strum_macros = "0.26.2"
zip = "0.6.6"
